--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load is_booked %}
+{% load is_booked on_favs %}
 {% block page_name %} {{room.name}} {% endblock page_name %}
 
 {% block content %} 
@@ -28,7 +28,13 @@
               <span class="mt-2 text-gray-500 ml-4">{{room.host.first_name}}</span>
             </a>
         </div>
-        <a class="btn-link block mb-10 w-1/3" href="{% url 'lists:save-room' room.pk %}">Save to Favorite</a>
+        {% on_favs room as on_favs_boolean %}
+        {% if on_favs_boolean  %}
+          Already on the favorite list
+          <a class="btn-link block mb-10 w-1/3 bg-green-500" href="{% url 'lists:save-room' room.pk %}">Remove from Favorite</a>
+        {% else %}
+          <a class="btn-link block mb-10 w-1/3" href="{% url 'lists:save-room' room.pk %}">Save to Favorite</a>
+        {% endif %}
         <div class="flex border-section">
           <span class="mr-3 font-light">{{room.room_type}}</span>
           <span class="mr-3 font-light">{{room.beds}} bed{{room.beds|pluralize}}</span>
